syntax = "proto3";

package discovery.v2;

service DiscoverService {
  rpc GetPotentialMatches(GetPotentialMatchesRequest) returns (GetPotentialMatchesResponse);
}

message GetPotentialMatchesRequest {
  string show_me = 2;
  int32 min_age = 3;
  int32 max_age = 4;
  int32 max_distance = 5;
  double location_lat = 6;
  double location_lng = 7;
  string looking_for = 8;
  repeated string exclude_user_ids = 9;
}

message Location {
  string type = 1;
  repeated double coordinates = 2;
  string display_name = 3;
}

message Match {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string gender = 5;
  string bio = 6;
  repeated string photos = 7;
  repeated string interests = 8;
  Location location = 9;
  double distance = 10;
  string status = 11;
}

message GetPotentialMatchesResponse {
  repeated Match matches = 1;
}
